# myers-diff

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: main.cpp  utils.h
myers/: CMakeLists.txt
myers-core/: CMakeLists.txt
myers-core/include/myers/: differ.h  internal_utils.h  linear_diff.h  quadratic_diff.h  types.h
myers-core/src/: myers_linear.cpp  quadratic_diff.cpp
myers-utils/: CMakeLists.txt
myers-utils/include/myers-utils/: compressor.h  file_input.h  input.h  vector_input.h
myers-utils/include/myers-utils/formatters/: string.h
myers/include/myers/: common.h  diff.h  diff_linear.h  interfaces.h  internal_utils.h  utils.h
myers/include/myres/: diff.h
myers/src/: diff.cpp  myers_linear.cpp
